Bug 364102 - kaffeine-2.0.2: FTBS when building with DVB support
Summary: kaffeine-2.0.2: FTBS when building with DVB support
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Exherbo Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-08 14:24 UTC by Timo Gurr
Modified: 2016-06-08 17:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
media-video_kaffeine-2.0.2-buildlog.txt (208.42 KB, text/plain)
2016-06-08 14:24 UTC, Timo Gurr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timo Gurr 2016-06-08 14:24:02 UTC
Building with -DHAVE_DVB:BOOL=FALSE works fine, with TRUE it fails.

[ 79%] Building CXX object src/CMakeFiles/kaffeine.dir/dvb/dvbtab.cpp.o
cd /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/build/src && /usr/bin/x86_64-pc-linux-gnu-c++   -DKCOREADDONS_LIB -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_SQL_LIB -DQT_WIDGETS_LIB -DQT_X11EXTRAS_LIB -DQT_XML_LIB -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -I/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/build/src -I/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src -I/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/include -I/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/build -I/usr/x86_64-pc-linux-gnu/include -isystem /usr/include/qt5 -isystem /usr/include/qt5/QtSql -isystem /usr/include/qt5/QtCore -isystem /usr/lib/qt5/mkspecs/linux-g++ -isystem /usr/include/qt5/QtX11Extras -isystem /usr/include/qt5/QtGui -isystem /usr/include/KF5/KIOWidgets -isystem /usr/include/KF5 -isystem /usr/include/KF5/KIOCore -isystem /usr/include/KF5/KCoreAddons -isystem /usr/include/KF5/KService -isystem /usr/include/KF5/KConfigCore -isystem /usr/include/KF5/KJobWidgets -isystem /usr/include/qt5/QtWidgets -isystem /usr/include/qt5/QtNetwork -isystem /usr/include/KF5/KCompletion -isystem /usr/include/KF5/KWidgetsAddons -isystem /usr/include/KF5/KXmlGui -isystem /usr/include/qt5/QtDBus -isystem /usr/include/qt5/QtXml -isystem /usr/include/KF5/KConfigWidgets -isystem /usr/include/KF5/KCodecs -isystem /usr/include/KF5/KConfigGui -isystem /usr/include/KF5/KAuth -isystem /usr/include/KF5/KI18n -isystem /usr/include/KF5/Solid -isystem /usr/include/KF5/KIOFileWidgets -isystem /usr/include/KF5/KBookmarks -isystem /usr/include/KF5/KItemViews -isystem /usr/include/KF5/KNotifications -isystem /usr/include/KF5/KIdleTime -isystem /usr/include/KF5/KDBusAddons  -march=native -O2 -pipe -DNDEBUG -DQT_NO_DEBUG -std=c++0x -fno-exceptions -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -std=c++0x -fno-exceptions -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -fvisibility=hidden -fvisibility-inlines-hidden   -fPIC -o CMakeFiles/kaffeine.dir/dvb/dvbtab.cpp.o -c /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp
In file included from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:26:0,
                 from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:50:
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/build/config-kaffeine.h:9:18: warning: "TRUE" is not defined [-Wundef]
 #define HAVE_DVB TRUE
                  ^
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:103:5: note: in expansion of macro 'HAVE_DVB'
 #if HAVE_DVB == 0
     ^
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:232:6: error: redefinition of 'void DvbTab::playChannel(const QString&)'
 void DvbTab::playChannel(const QString &nameOrNumber)
      ^
In file included from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:50:0:
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:104:13: note: 'void DvbTab::playChannel(const QString&)' previously defined here
 inline void DvbTab::playChannel(QString const &) { }
             ^
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:251:6: error: redefinition of 'void DvbTab::playLastChannel()'
 void DvbTab::playLastChannel()
      ^
In file included from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:50:0:
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:105:13: note: 'void DvbTab::playLastChannel()' previously defined here
 inline void DvbTab::playLastChannel() { }
             ^
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:264:6: error: redefinition of 'void DvbTab::toggleOsd()'
 void DvbTab::toggleOsd()
      ^
In file included from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:50:0:
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:106:13: note: 'void DvbTab::toggleOsd()' previously defined here
 inline void DvbTab::toggleOsd() { }
             ^
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:269:6: error: redefinition of 'void DvbTab::toggleInstantRecord()'
 void DvbTab::toggleInstantRecord()
      ^
In file included from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:50:0:
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:107:13: note: 'void DvbTab::toggleInstantRecord()' previously defined here
 inline void DvbTab::toggleInstantRecord() { }
             ^
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:279:6: error: redefinition of 'void DvbTab::osdKeyPressed(int)'
 void DvbTab::osdKeyPressed(int key)
      ^
In file included from /var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.cpp:50:0:
/var/tmp/paludis/build/media-video-kaffeine-2.0.2/work/kaffeine-2.0.2/src/dvb/dvbtab.h:108:13: note: 'void DvbTab::osdKeyPressed(int)' previously defined here
 inline void DvbTab::osdKeyPressed(int) { }
             ^

Please see the attached full build.log for details.

Reproducible: Always
Comment 1 Timo Gurr 2016-06-08 14:24:24 UTC
Created attachment 99412 [details]
media-video_kaffeine-2.0.2-buildlog.txt
Comment 2 Mauro Carvalho Chehab 2016-06-08 17:38:22 UTC
Git commit ca9b856f313dc5e6c9d393f38f02a88e5bc568b5 by Mauro Carvalho Chehab.
Committed on 08/06/2016 at 17:36.
Pushed by mauroc into branch 'master'.

config-kaffeine.h: fix HAVE_DVB breakage

The logic to detect libdvbv5 changed on Kaffeine 2.0.2 and
somehow affected compilation when DVB is enabled. Fix it and
remove the warnings when building without DVB support.

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>

M  +2    -0    CMakeLists.txt
M  +2    -0    src/dbusobjects.cpp

http://commits.kde.org/kaffeine/ca9b856f313dc5e6c9d393f38f02a88e5bc568b5