config-kaffeine.h: fix HAVE_DVB breakage

The logic to detect libdvbv5 changed on Kaffeine 2.0.2 and
somehow affected compilation when DVB is enabled. Fix it and
remove the warnings when building without DVB support.

BUG: 364102

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>